@@ -195,9 +195,15 @@ tests_test_service_type_LDADD			= libepc/libepc-1.0.la tests/libepc-tests.la
 # ==================
 
 libepc/marshal.h: libepc/marshal.list
-	$(GLIB_GENMARSHAL) $< --header --prefix=_epc_marshal > $@ || { rm -f $@; false; }
+	{ echo '/* Generated by $(GLIB_GENMARSHAL) from $< */' && \
+	  $(GLIB_GENMARSHAL) $< --header --prefix=_epc_marshal; } > $@ || \
+	{ rm -f $@; false; }
 libepc/marshal.c: libepc/marshal.list
-	( echo '#include "marshal.h"' && $(GLIB_GENMARSHAL) $< --body --prefix=_epc_marshal ) > $@ || { rm -f $@; false; }
+	{ echo '/* Generated by $(GLIB_GENMARSHAL) from $< */' && \
+	  echo '#include "marshal.h"' && \
+	  $(GLIB_GENMARSHAL) $< --body --prefix=_epc_marshal; } > $@ || \
+	{ rm -f $@; false; }
+
 libepc/enums.h.tmp: libepc/enums.h.in $(libepc_headers)
 	(cd $(srcdir) && $(GLIB_MKENUMS) --template $< $(libepc_headers)) > $@ || { rm -f $@; false; }
 libepc/enums.h.stamp: libepc/enums.h.tmp
