@@ -4,7 +4,7 @@
 /*** END file-header ***/
 
 /*** BEGIN file-production ***/
-/* enumerations from "@filename@" */
+/* Generated by glib-mkenums from "@filename@" */
 
 /*** END file-production ***/
 
