@@ -9,6 +9,7 @@ G_BEGIN_DECLS
 /*** END file-header ***/
 
 /*** BEGIN file-production ***/
+/* Generated by glib-mkenums from "@filename@" */
 #include "@filename@"
 
 /*** END file-production ***/
